--- a/ctp/ctp.html
+++ b/ctp/ctp.html
@@ -43,8 +43,8 @@
 <body>
   <h1>Convert To PDF : PDF HQ</h1>
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
-  <h2><a href="hq/ctp/pp.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></h2>
-    <h2><a href="hq/ctp/toc.html" style="color: inherit; text-decoration: underline;">Terms Of Condition</a></h2>
+  <h2><a href="pp.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></h2>
+  <h2><a href="toc.html" style="color: inherit; text-decoration: underline;">Terms Of Conditions</a></h2>
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
