--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body>
   <h1>Ship & Sail HQ</h1>
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
-  <h2><a href="hq/ctp/pp.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2>
+  <h2><a href="ctp/ctp.html" style="color: inherit; text-decoration: underline;">Convert To PDF</a></h2>
+  
   <footer>© 2025 Ship & Sail</footer>
 </body>
 </html>
