--- a/ctp/pp.html
+++ b/ctp/pp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy – Golf Slope Reader Pro</title>
+  <title>Privacy Policy – Convert To PDF</title>
   <style>
     body {
       background-color: #0a0a0a;
@@ -22,14 +22,36 @@
   </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>Golf Slope Reader Pro does not collect, store, or share any personal data.</p>
-  <p>The app uses on-device sensors (accelerometer) to detect slope angles for the purpose of providing real-time golf insights. All sensor processing is done locally on your device.</p>
-  <p>Voice feedback is provided using the system’s built-in Text-to-Speech engine. Vibration feedback is triggered locally based on slope intensity.</p>
-  <p>This app does not connect to the internet and does not transmit any data to any server.</p>
-  <p>We take privacy seriously and ensure full compliance with Google Play policies, the GDPR, and other global data protection laws.</p>
-  <p>If you have any questions, you may contact us at: support@ajnyata.com</p>
+<h1>Privacy Policy</h1>
+<p><strong>Effective Date:</strong> July 21, 2025</p>
 
-  <p><a href="/index.html">← Back to Home</a></p>
+<p>This Privacy Policy applies to the mobile application "Convert To PDF : PDF HQ" (“we”, “our”, or “us”). It describes how we handle your data when you use the app.</p>
+
+<h2>1. Data Collection</h2>
+<p>We do not collect or store any personal information from users of this app. The app can be used without signing in or providing any personal identifiers.</p>
+
+<h2>2. File Upload and Conversion</h2>
+<p>To convert documents, your files may be temporarily uploaded to a secure server. These files are used solely for the purpose of conversion and are automatically deleted immediately after the process is completed. We do not retain, access, or share your files.</p>
+
+<h2>3. Security</h2>
+<p>All file transfers are encrypted and handled via secure HTTPS connections. Files are not accessed by any human and are never shared with third parties.</p>
+
+<h2>4. Analytics and Tracking</h2>
+<p>We do not use analytics SDKs, advertising SDKs, or third-party tracking services at this time.</p>
+<p>We currently do not collect personal information or usage metrics. If this changes in a future version of the app, we will update this Privacy Policy and notify users as required.</p>
+
+<h2>5. Children’s Privacy</h2>
+<p>This app is not intended for children under the age of 13. We do not knowingly collect or solicit personal data from anyone under 13. If you believe a child has provided us with personal information, please contact us so we can delete it.</p>
+
+<h2>6. Data Retention</h2>
+<p>Converted files are deleted automatically after processing. We do not store converted or original documents on our servers after the session ends.</p>
+
+<h2>7. Changes to This Policy</h2>
+<p>We may update this Privacy Policy occasionally. Changes will be reflected on this page with an updated effective date. Continued use of the app after changes constitutes your acceptance.</p>
+
+<h2>8. Contact Us</h2>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at: splops@proton.me</p>
+
+<p><a href="/index.html">← Back to Home</a></p>
 </body>
 </html>
