--- a/ctp/toc.html
+++ b/ctp/toc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy – Golf Slope Reader Pro</title>
+  <title>Terms and Conditions – Convert To PDF : PDF HQ</title>
   <style>
     body {
       background-color: #0a0a0a;
@@ -19,16 +19,45 @@
     h1 {
       font-size: 1.8rem;
     }
+    h2 {
+      margin-top: 1.5rem;
+      font-size: 1.4rem;
+    }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p>Golf Slope Reader Pro does not collect, store, or share any personal data.</p>
-  <p>The app uses on-device sensors (accelerometer) to detect slope angles for the purpose of providing real-time golf insights. All sensor processing is done locally on your device.</p>
-  <p>Voice feedback is provided using the system’s built-in Text-to-Speech engine. Vibration feedback is triggered locally based on slope intensity.</p>
-  <p>This app does not connect to the internet and does not transmit any data to any server.</p>
-  <p>We take privacy seriously and ensure full compliance with Google Play policies, the GDPR, and other global data protection laws.</p>
-  <p>If you have any questions, you may contact us at: support@ajnyata.com</p>
+  <h1>Terms and Conditions</h1>
+  <p><strong>Effective Date:</strong> July 21, 2025</p>
+
+  <h2>1. Acceptance of Terms</h2>
+  <p>By downloading or using the Convert To PDF : PDF HQ app (“App”), you agree to be bound by these Terms and Conditions. If you do not agree, do not use the app.</p>
+
+  <h2>2. Use of the App</h2>
+  <p>You may use the App solely for personal, non-commercial purposes. You must not misuse the App or use it for any unlawful activity.</p>
+
+  <h2>3. File Handling</h2>
+  <p>The App may temporarily upload files to a secure server for the sole purpose of converting them to PDF. Files are automatically deleted shortly after the conversion is complete. We do not store or retain any user content.</p>
+
+  <h2>4. Intellectual Property</h2>
+  <p>All rights, title, and interest in and to the App and its content (excluding your files) are owned by the developers of Convert To PDF : PDF HQ. You may not copy, modify, or distribute any part of the App without written permission.</p>
+
+  <h2>5. Disclaimers</h2>
+  <p>The App is provided "as is" without warranties of any kind. We do not guarantee that it will be error-free or that file conversions will always succeed.</p>
+
+  <h2>6. Limitation of Liability</h2>
+  <p>To the fullest extent permitted by law, the developers of Convert To PDF : PDF HQ shall not be liable for any indirect, incidental, or consequential damages resulting from your use of the App.</p>
+
+  <h2>7. Changes to These Terms</h2>
+  <p>We may update these Terms at any time. Continued use of the App after changes means you accept the revised Terms.</p>
+
+  <h2>8. Contact</h2>
+  <p>If you have questions or concerns, contact us at: splops@proton.me</p>
+
+  <h2>9. User Content</h2>
+  <p>Any content you submit or store via the App remains yours. You are responsible for ensuring that your content does not violate any applicable laws or infringe on the rights of others. We do not review or monitor user content, and you assume all risks associated with its use or sharing.</p>
+
+  <h2>10. Contact</h2>
+  <p>If you have questions or concerns, contact us at: splops@proton.me</p>
 
   <p><a href="/index.html">← Back to Home</a></p>
 </body>
