--- a/ts/ts.html
+++ b/ts/ts.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,10 +41,10 @@
   </style>
 </head>
 <body>
-  <h1>Ship & Sail HQ</h1>
+  <h1>Tattoo AI : The Studio</h1>
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
-  <h2><a href="ctp/ctp.html" style="color: inherit; text-decoration: underline;">Convert To PDF</a></h2>
-  <h2><a href="ts/ts.html" style="color: inherit; text-decoration: underline;">Tattoo AI : The Studio</a></h2>
+  <h2><a href="pp.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></h2>
+  <h2><a href="toc.html" style="color: inherit; text-decoration: underline;">Terms Of Conditions</a></h2>
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
