--- a/ctp/pp.html
+++ b/ctp/pp.html
@@ -47,7 +47,7 @@
 <p>We may update this Privacy Policy occasionally. Changes will be reflected on this page with an updated effective date. Continued use of the app after changes constitutes your acceptance.</p>
 
 <h2>8. Contact Us</h2>
-<p>If you have any questions or concerns about this Privacy Policy, please contact us at: splops@proton.me</p>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at: splopshq@proton.me</p>
 
 <p><a href="/index.html">← Back to Home</a></p>
 </body>
