--- a/ts/pp.html
+++ b/ts/pp.html
@@ -30,9 +30,6 @@
 <h2>1. Data Collection</h2>
 <p>We do not collect or store any personal information from users of this app. The app can be used without signing in or providing any personal identifiers.</p>
 
-<h2>2. File Upload and Conversion</h2>
-<p>To convert documents, your files may be temporarily uploaded to a secure server. These files are used solely for the purpose of conversion and are automatically deleted immediately after the process is completed. We do not retain, access, or share your files.</p>
-
 <h2>3. Security</h2>
 <p>All file transfers are encrypted and handled via secure HTTPS connections. Files are not accessed by any human and are never shared with third parties.</p>
 
@@ -41,7 +38,7 @@
 <p>We currently do not collect personal information or usage metrics. If this changes in a future version of the app, we will update this Privacy Policy and notify users as required.</p>
 
 <h2>6. Data Retention</h2>
-<p>Converted files are deleted automatically after processing. We do not store converted or original documents on our servers after the session ends.</p>
+<p>Processed files are deleted automatically after processing. We do not store documents on our servers after the session ends.</p>
 
 <h2>7. Changes to This Policy</h2>
 <p>We may update this Privacy Policy occasionally. Changes will be reflected on this page with an updated effective date. Continued use of the app after changes constitutes your acceptance.</p>
