--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
   <h2><a href="ctp/ctp.html" style="color: inherit; text-decoration: underline;">Convert To PDF</a></h2>
   <h2><a href="ts/ts.html" style="color: inherit; text-decoration: underline;">Tattoo AI : The Studio</a></h2>
+  <h2><a href="we/we.html" style="color: inherit; text-decoration: underline;">Water Eject : Speaker Buddy</a></h2>
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
