--- a/fish/fish.html
+++ b/fish/fish.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>Tanning App : Caffella</h1>
+  <h1>Fish AI : Marine Buddy</h1>
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
   <h2><a href="pp.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></h2>
   <h2><a href="toc.html" style="color: inherit; text-decoration: underline;">Terms Of Conditions</a></h2>
