--- a/fish/pp.html
+++ b/fish/pp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy – Tattoo AI : The Studio</title>
+  <title>Privacy Policy – Fish AI : Marine Buddy</title>
   <style>
     body {
       background-color: #0a0a0a;
@@ -25,10 +25,13 @@
 <h1>Privacy Policy</h1>
 <p><strong>Effective Date:</strong> July 21, 2025</p>
 
-<p>This Privacy Policy applies to the mobile application "Tanning App : Caffella" (“we”, “our”, or “us”). It describes how we handle your data when you use the app.</p>
+<p>This Privacy Policy applies to the mobile application "Fish AI : Marine Buddy" (“we”, “our”, or “us”). It describes how we handle your data when you use the app to identify marine species.</p>
 
 <h2>1. Data Collection</h2>
 <p>We do not collect or store any personal information from users of this app. The app can be used without signing in or providing any personal identifiers.</p>
+
+<h2>2. Image Upload and Identification</h2>
+<p>To identify marine species in your images, your images may be temporarily uploaded to a secure server for analysis. These images are used solely for the purpose of identification and are automatically deleted immediately after processing. We do not retain, access, or share your images.</p>
 
 <h2>3. Security</h2>
 <p>All file transfers are encrypted and handled via secure HTTPS connections. Files are not accessed by any human and are never shared with third parties.</p>
@@ -38,7 +41,7 @@
 <p>We currently do not collect personal information or usage metrics. If this changes in a future version of the app, we will update this Privacy Policy and notify users as required.</p>
 
 <h2>6. Data Retention</h2>
-<p>Processed files are deleted automatically after processing. We do not store documents on our servers after the session ends.</p>
+<p>Uploaded images are deleted automatically after processing. We do not store uploaded or processed images on our servers after the session ends.</p>
 
 <h2>7. Changes to This Policy</h2>
 <p>We may update this Privacy Policy occasionally. Changes will be reflected on this page with an updated effective date. Continued use of the app after changes constitutes your acceptance.</p>
