--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <h2><a href="ts/ts.html" style="color: inherit; text-decoration: underline;">Tattoo AI : The Studio</a></h2>
   <h2><a href="we/we.html" style="color: inherit; text-decoration: underline;">Water Eject : Speaker Buddy</a></h2>
   <h2><a href="ta/ta.html" style="color: inherit; text-decoration: underline;">Tanning App : Caffella</a></h2>
+  <h2><a href="fish/fish.html" style="color: inherit; text-decoration: underline;">Fish AI : Marine Buddy</a></h2>
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
