--- a/coin/coin.html
+++ b/coin/coin.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,15 +41,10 @@
   </style>
 </head>
 <body>
-  <h1>Ship & Sail HQ</h1>
+  <h1>Coin Identifier : Value Buddy</h1>
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
-  <h2><a href="ctp/ctp.html" style="color: inherit; text-decoration: underline;">Convert To PDF</a></h2>
-  <h2><a href="ts/ts.html" style="color: inherit; text-decoration: underline;">Tattoo AI : The Studio</a></h2>
-  <h2><a href="we/we.html" style="color: inherit; text-decoration: underline;">Water Eject : Speaker Buddy</a></h2>
-  <h2><a href="ta/ta.html" style="color: inherit; text-decoration: underline;">Tanning App : Caffella</a></h2>
-  <h2><a href="fish/fish.html" style="color: inherit; text-decoration: underline;">Fish AI : Marine Buddy</a></h2>
-  <h2><a href="rock/rock.html" style="color: inherit; text-decoration: underline;">Rock Identifier : Stone Buddy</a></h2>
-  <h2><a href="coin/coin.html" style="color: inherit; text-decoration: underline;">Coin Identifier : Value Buddy</a></h2>
+  <h2><a href="pp.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></h2>
+  <h2><a href="toc.html" style="color: inherit; text-decoration: underline;">Terms Of Conditions</a></h2>
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
