--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
   <h2><a href="fish/fish.html" style="color: inherit; text-decoration: underline;">Fish AI : Marine Buddy</a></h2>
   <h2><a href="rock/rock.html" style="color: inherit; text-decoration: underline;">Rock Identifier : Stone Buddy</a></h2>
   <h2><a href="coin/coin.html" style="color: inherit; text-decoration: underline;">Coin Identifier : Value Buddy</a></h2>
+  <h2><a href="bird/bird.html" style="color: inherit; text-decoration: underline;">Bird Identifier : Feather Buddy</a></h2>
+  <h2><a href="bug/bug.html" style="color: inherit; text-decoration: underline;">Bug Identifier : Insect Buddy</a></h2>
+  <h2><a href="dog/dog.html" style="color: inherit; text-decoration: underline;">Dog Breed Identifier : Pawfect</a></h2>
+  <h2><a href="plant/plant.html" style="color: inherit; text-decoration: underline;">Plant Identifier : Leaf Buddy</a></h2>
+  <h2><a href="snake/snake.html" style="color: inherit; text-decoration: underline;">Snake Identifier</a></h2>
+  <h2><a href="card/card.html" style="color: inherit; text-decoration: underline;">Card Identifier</a></h2>
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
