--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
   <h2><a href="plant/plant.html" style="color: inherit; text-decoration: underline;">Plant Identifier : Leaf Buddy</a></h2>
   <h2><a href="snake/snake.html" style="color: inherit; text-decoration: underline;">Snake Identifier</a></h2>
   <h2><a href="card/card.html" style="color: inherit; text-decoration: underline;">Card Identifier </a></h2>
-    <h2><a href="work/work.html" style="color: inherit; text-decoration: underline;">Hours Tracker : Nine to Five</a></h2>
+  <h2><a href="work/work.html" style="color: inherit; text-decoration: underline;">Hours Tracker : Nine to Five</a></h2>
+  <h2><a href="jewel/jewel.html" style="color: inherit; text-decoration: underline;">Jewelry Identifier : Aureliva</a></h2>
+
 
   <footer>© 2025 Ship & Sail</footer>
 </body>
