--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <h2><a href="card/card.html" style="color: inherit; text-decoration: underline;">Card Identifier </a></h2>
   <h2><a href="work/work.html" style="color: inherit; text-decoration: underline;">Hours Tracker : Nine to Five</a></h2>
   <h2><a href="jewel/jewel.html" style="color: inherit; text-decoration: underline;">Jewelry Identifier : Aureliva</a></h2>
+  <h2><a href="cat/cat.html" style="color: inherit; text-decoration: underline;">Cat Identifier : Lynxia</a></h2>
 
 
   <footer>© 2025 Ship & Sail</footer>
