--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <h2><a href="jewel/jewel.html" style="color: inherit; text-decoration: underline;">Jewelry Identifier : Aureliva</a></h2>
   <h2><a href="cat/cat.html" style="color: inherit; text-decoration: underline;">Cat Identifier : Lynxia</a></h2>
   <h2><a href="weigh/weigh.html" style="color: inherit; text-decoration: underline;">Scale For Grams : True Weight</a></h2>
+  <h2><a href="room/room.html" style="color: inherit; text-decoration: underline;">Room Planner : Aurana</a></h2>
 
 
   <footer>© 2025 Ship & Sail</footer>
