--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <h2><a href="cat/cat.html" style="color: inherit; text-decoration: underline;">Cat Identifier : Lynxia</a></h2>
   <h2><a href="weigh/weigh.html" style="color: inherit; text-decoration: underline;">Scale For Grams : True Weight</a></h2>
   <h2><a href="room/room.html" style="color: inherit; text-decoration: underline;">Room Planner : Aurana</a></h2>
+  <h2><a href="trolly/trolly.html" style="color: inherit; text-decoration: underline;">Grocery List : Trolly</a></h2>
 
 
   <footer>© 2025 Ship & Sail</footer>
