--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <h2><a href="bug/bug.html" style="color: inherit; text-decoration: underline;">Bug Identifier : Insect Buddy</a></h2>
   <h2><a href="dog/dog.html" style="color: inherit; text-decoration: underline;">Dog Breed Identifier : Pawfect</a></h2>
   <h2><a href="plant/plant.html" style="color: inherit; text-decoration: underline;">Plant Identifier : Leaf Buddy</a></h2>
-  <h2><a href="snake/snake.html" style="color: inherit; text-decoration: underline;">Snake Identifier</a></h2>
+  <h2><a href="snake/snake.html" style="color: inherit; text-decoration: underline;">Snake Identifier : Venira</a></h2>
   <h2><a href="card/card.html" style="color: inherit; text-decoration: underline;">Card Identifier </a></h2>
   <h2><a href="work/work.html" style="color: inherit; text-decoration: underline;">Hours Tracker : Nine to Five</a></h2>
   <h2><a href="jewel/jewel.html" style="color: inherit; text-decoration: underline;">Jewelry Identifier : Aureliva</a></h2>
