--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
       background: #000;
       color: #fff;
       font-family: 'Source Code Pro', monospace;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
       padding: 1rem;
     }
     h1 {
@@ -32,10 +27,9 @@
       margin-top: 0.5rem;
     }
     footer {
-      position: absolute;
-      bottom: 1rem;
       font-size: 0.85rem;
       opacity: 0.6;
+      margin-top: 2rem;
     }
   </style>
 </head>
