--- a/room/pp.html
+++ b/room/pp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy – Room Planner : Aurana</title>
+  <title>Privacy Policy – Aurana : Room Planner For Her</title>
   <style>
     body {
       background-color: #0a0a0a;
@@ -25,29 +25,32 @@
 <h1>Privacy Policy</h1>
 <p><strong>Effective Date:</strong> July 21, 2025</p>
 
-<p>This Privacy Policy applies to the mobile application "Room Planner : Aurana" (“we”, “our”, or “us”). It describes how we handle your data when you use the app to identify marine species.</p>
+<p>This Privacy Policy applies to the mobile application "Aurana : Room Planner For Her" (“we”, “our”, or “us”). It describes how we handle your data when you use the app to generate and edit room designs using artificial intelligence. We are committed to protecting your privacy and ensuring that your personal information is handled with the utmost care and respect. Your trust is important to us, and we strive to be transparent about our practices while providing you with a delightful and empowering experience. At Aurana, we believe in building a positive relationship with our users, fostering a sense of security and confidence in every interaction. We value your time and effort in choosing our app, and we are grateful for the opportunity to support your creative endeavors.</p>
 
-<h2>1. Data Collection</h2>
-<p>We do not collect or store any personal information from users of this app. The app can be used without signing in or providing any personal identifiers.</p>
 
-<h2>2. Image Upload and Identification</h2>
-<p>To identify marine species in your images, your images may be temporarily uploaded to a secure server for analysis. These images are used solely for the purpose of identification and are automatically deleted immediately after processing. We do not retain, access, or share your images.</p>
+<p>We collect certain personal information when you choose to sign in to the app using Google authentication. This includes your email address, name, given name, family name, user identifier, sign-in timestamps, region code, preferred languages, time zone, app version, build number, and device model. This information is used to manage your account, synchronize progress across devices, and provide personalized services. We understand that sharing personal details is a significant decision, and we assure you that this data is collected only with your explicit consent and is essential for offering you a seamless, tailored experience that enhances your room planning journey.</p>
+<p>If you make in-app purchases, additional data related to your purchases may be collected through our payment processor, including your email address for transaction identification. We partner with trusted third-party services to handle payments securely, and we do not store sensitive payment information ourselves. Your financial details are protected by industry-standard measures, and we appreciate your support in helping us continue to develop and improve Aurana. Rest assured, we handle all transactions with integrity and prioritize your convenience and peace of mind in every step of the process.</p>
 
-<h2>3. Security</h2>
-<p>All file transfers are encrypted and handled via secure HTTPS connections. Files are not accessed by any human and are never shared with third parties.</p>
 
-<h2>4. Analytics and Tracking</h2>
-<p>We do not use analytics SDKs, advertising SDKs, or third-party tracking services at this time.</p>
-<p>We currently do not collect personal information or usage metrics. If this changes in a future version of the app, we will update this Privacy Policy and notify users as required.</p>
+<p>To generate and edit room designs, your images and prompts may be temporarily uploaded to a secure server for processing by our AI systems. These images and prompts are used solely for the purpose of creating design outputs and are automatically deleted immediately after processing. We do not retain, access, or share your images or prompts beyond the necessary processing time. We value the creativity and personal nature of your designs, and we take every precaution to ensure that your uploaded content is handled confidentially and securely, allowing you to explore ideas without worry. Your inspiration and unique vision are at the heart of what we do, and we are honored to be part of your design process.</p>
 
-<h2>6. Data Retention</h2>
-<p>Uploaded images are deleted automatically after processing. We do not store uploaded or processed images on our servers after the session ends.</p>
 
-<h2>7. Changes to This Policy</h2>
-<p>We may update this Privacy Policy occasionally. Changes will be reflected on this page with an updated effective date. Continued use of the app after changes constitutes your acceptance.</p>
+<p>All file transfers are encrypted and handled via secure HTTPS connections. Files are not accessed by any human and are never shared with third parties. We employ robust security measures to safeguard your data, including encryption both in transit and at rest, regular security audits, and adherence to best practices in data protection. Your peace of mind is paramount, and we are dedicated to maintaining the highest standards of security to protect your information from unauthorized access or misuse. We continually invest in advanced technologies and protocols to ensure that your data remains safe and sound, reflecting our unwavering commitment to your well-being.</p>
 
-<h2>8. Contact Us</h2>
-<p>If you have any questions or concerns about this Privacy Policy, please contact us at: splopshq@proton.me</p>
+
+<p>When using the chat feature to assist with design advice, your messages are temporarily sent to our AI service for processing. These messages are used solely to generate responses and are not stored or retained after the interaction. We appreciate your engagement with our chat assistant, Aurana AI, which is designed to provide helpful, personalized guidance. Rest assured that your conversations are treated with confidentiality, and we prioritize your comfort in sharing your thoughts and ideas. We cherish every interaction and strive to make our chat feature a pleasant and supportive space for your design queries.</p>
+
+
+<p>We do not use analytics SDKs, advertising SDKs, or third-party tracking services. However, we collect account and usage data as described in Section 1 to provide and improve our services. We do not share this data with third parties except as necessary for service provision (e.g., payment processing). Our approach is focused on enhancing your experience rather than intrusive monitoring, and we are grateful for the opportunity to learn from your interactions to make Aurana even better for you and our community.</p>
+
+
+<p>Uploaded images and prompts are deleted automatically after processing. We do not store uploaded images, prompts, or processed data on our servers after the session ends. Account data is retained as long as your account is active and may be deleted upon your request or account deletion. We believe in minimal retention practices to respect your privacy, and we are committed to promptly removing your data when it is no longer needed or when you choose to discontinue using our services.</p>
+
+
+<p>We may update this Privacy Policy occasionally. Changes will be reflected on this page with an updated effective date. Continued use of the app after changes constitutes your acceptance. We understand that changes to privacy policies can be concerning, so we strive to communicate any updates clearly and provide ample notice. Your continued trust and feedback are invaluable as we evolve our practices to better serve you.</p>
+
+
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at: splopshq@proton.me. We welcome your inquiries and are here to assist you with any privacy-related matters. Your feedback helps us improve, and we appreciate the opportunity to address your needs directly and thoughtfully.</p>
 
 <p><a href="/index.html">← Back to Home</a></p>
 </body>
