--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <h1>Ship & Sail HQ</h1>
   <!-- <h2><a href="ajnyataHQ/golf_privacy.html" style="color: inherit; text-decoration: underline;">Golf Slope Reader Pro</a></h2> -->
-  <h2><a href="ctp/ctp.html" style="color: inherit; text-decoration: underline;">Convert To PDF</a></h2>
+  <h2><a href="room/room.html" style="color: inherit; text-decoration: underline;">Aurana : Room Planner For Her</a></h2>
   <h2><a href="ts/ts.html" style="color: inherit; text-decoration: underline;">Tattoo AI : The Studio</a></h2>
   <h2><a href="we/we.html" style="color: inherit; text-decoration: underline;">Water Eject : Speaker Buddy</a></h2>
   <h2><a href="ta/ta.html" style="color: inherit; text-decoration: underline;">Tanning App : Caffella</a></h2>
@@ -53,7 +53,6 @@
   <h2><a href="jewel/jewel.html" style="color: inherit; text-decoration: underline;">Jewelry Identifier : Aureliva</a></h2>
   <h2><a href="cat/cat.html" style="color: inherit; text-decoration: underline;">Cat Identifier : Lynxia</a></h2>
   <h2><a href="weigh/weigh.html" style="color: inherit; text-decoration: underline;">Scale For Grams : True Weight</a></h2>
-  <h2><a href="room/room.html" style="color: inherit; text-decoration: underline;">Room Planner : Aurana</a></h2>
   <h2><a href="trolly/trolly.html" style="color: inherit; text-decoration: underline;">Grocery List : Trolly</a></h2>
   <h2><a href="humangpt/humangpt.html" style="color: inherit; text-decoration: underline;">AI Detector : HumanGPT</a></h2>
 
