--- a/ds/ds.html
+++ b/ds/ds.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>GPT Chat</h1>
+  <h1>Deep Search : Research AI</h1>
   <h2><a href="pp.html" style="color: inherit; text-decoration: underline;">Privacy Policy</a></h2>
   <h2><a href="toc.html" style="color: inherit; text-decoration: underline;">Terms Of Conditions</a></h2>
 
