--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <h2><a href="weigh/weigh.html" style="color: inherit; text-decoration: underline;">Scale For Grams : True Weight</a></h2>
   <h2><a href="trolly/trolly.html" style="color: inherit; text-decoration: underline;">Grocery List : Trolly</a></h2>
   <h2><a href="humangpt/humangpt.html" style="color: inherit; text-decoration: underline;">AI Detector : HumanGPT</a></h2>
-  <h2><a href="gptchat/gptchat.html" style="color: inherit; text-decoration: underline;">GPTChat : AI Assistant</a></h2>
+  <h2><a href="ds/ds.html" style="color: inherit; text-decoration: underline;">Deep Search : Research AI</a></h2>
 
 
   <footer>© 2025 Ship & Sail</footer>
