--- a/ds/pp.html
+++ b/ds/pp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy – GPTChat</title>
+  <title>Privacy Policy – Deep Search : Research AI</title>
   <style>
     body {
       background-color: #0a0a0a;
@@ -25,7 +25,7 @@
 <h1>Privacy Policy</h1>
 <p><strong>Effective Date:</strong> November 13, 2025</p>
 
-<p>This Privacy Policy applies to the mobile application "GPTChat" ("we", "our", or "us"). It describes how we handle your data when you use the app.</p>
+<p>This Privacy Policy applies to the mobile application "Deep Search : Research AI" ("we", "our", or "us"). It describes how we handle your data when you use the app.</p>
 
 <h2>1. Data Collection</h2>
 <p>We do not collect or store any personal information from users of this app. The app can be used without signing in or providing any personal identifiers.</p>
