--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <h2><a href="trolly/trolly.html" style="color: inherit; text-decoration: underline;">Grocery List : Trolly</a></h2>
   <h2><a href="humangpt/humangpt.html" style="color: inherit; text-decoration: underline;">AI Detector : HumanGPT</a></h2>
   <h2><a href="ds/ds.html" style="color: inherit; text-decoration: underline;">Deep Search : Research AI</a></h2>
+  <h2><a href="sf/sf.html" style="color: inherit; text-decoration: underline;">Metal Stud Finder Pro</a></h2>
 
 
   <footer>© 2025 Ship & Sail</footer>
